# llms-with-huggingface

./: .gitignore  .pmat-gates.toml  .pmat-metrics.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  demo.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml  security.yml
.pmat/: project.toml
assets/: demo-preview.txt
docs/: capstone-falsification-checklist.md  capstone-project.md  falsification-validation-report.md  outline.md
examples/1-simple/: async.py  chat.py  structured.py
examples/2-rag/: rag.ipynb  requirements.txt  top_rated_wines.csv
examples/3-api/: .env  chat.py  requirements.txt  solution.py
examples/4-small-lm/: .env  chat.py
examples/5-agentic/: chat.py  hg-inference.py  requirements.txt  simple.py
examples/shared/: __init__.py  chat_utils.py
hooks/: pre-commit
labs/: lab-1.md  lab-2.md  lab-3.md  lab-4.md  lab-5.md
src/: __init__.py
src/agents/: __init__.py  research_agent.py
src/agents/tools/: __init__.py  summarizer.py  web_search.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  chat.py  research.py
src/models/: __init__.py  llm.py  schemas.py
src/rag/: __init__.py  vectorstore.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_api_advanced.py  test_llm_client.py  test_mocks.py  test_performance.py  test_security.py  test_vectorstore.py
