[project]
name = "llms-with-huggingface"
version = "1.0.0"
description = "Hands-on labs for building LLM applications with Hugging Face"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

dependencies = [
    "openai>=1.58.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "langchain>=0.3.14",
    "langchain-core>=0.3.28",
    "langchain-openai>=0.3.0",
    "sentence-transformers>=3.3.1",
    "qdrant-client>=1.12.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.0",
    "httpx>=0.28.1",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E722"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
